[metadata]
name = kartaview-tools
version = file: VERSION
author = Marcello Perathoner
author_email = marcello@perathoner.de
description = Commandline Image Uploader for KartaView
long_description = file: README.rst
long_description_content_type = text/x-rst

url = https://github.com/MarcelloPerathoner/kartaview-tools

project_urls =
    Bug Tracker = https://github.com/MarcelloPerathoner/kartaview-tools/issues

# See: https://pypi.org/classifiers
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities

keywords =
    kartaview
    commandline
    console
    image
    upload

install_requires = file: requirements.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10.4

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kv_auth = kartaview_tools.kv_auth:main
    kv_sequence = kartaview_tools.kv_sequence:main
    kv_upload = kartaview_tools.kv_upload:main
    kv_vantrue_x4s = kartaview_tools.kv_vantrue_x4s:main
